--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-rate-limit": "^6.0.3",
+    "gunzip-file": "^0.1.1",
     "needle": "^3.0.0"
   }
 }
